contact.html completed and index.html updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- 2110082 -->
   
   <header>
-    <h1 class="roboto-regular">Online Store</h1>
+    <h1 class="roboto-regular"> Wellcome To Online Store</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="products.html">Products</a>
